--- a/Models/-SVC/2024.08.22_LCM-SVC.md
+++ b/Models/-SVC/2024.08.22_LCM-SVC.md
@@ -76,3 +76,166 @@ Section 2 outlines the proposed LCM-SVC method.
 Experiments are presented in Section 3.
 
 Finally, Section 4 concludes this work.
+
+## 2·Method
+
+![](fig2.pdf)
+
+<a id="ldm-svc">Left: Pre-training procedure of So-VITS-SVC; Right: Training procedure of LCM-SVC Teacher.</a>
+
+### Latent Diffusion Model for SVC
+
+The VAE model is firstly pre-trained to extract hidden latent vectors using So-VITS-SVC, which is a variant of VITS [^Kim2021Conditional], consisting of three key components: posterior encoder, prior encoder and decoder as depicted in Figure 1. 
+The posterior encoder composed of non-causal WaveNet [^Oord2016Wavenet] residual blocks models the posterior distribution $p(z|y,e)$ of the hidden representation $z$ from the linear spectrograms  $y$ generated from the  singing waveforms,  where singer embedding $e$ is extracted by an additional speaker verification model.
+
+The prior encoder, constructed with a multi-layer Transformer [^Vaswani2017Attention], estimates the prior distribution $p(z|x,f_0,e)$, where $x$ and $f_0$ represent the phonetic posteriorgrams (PPG) and fundamental frequency (F0) respectively.
+
+A normalizing flow [^Papamakarios2021Normalizing] is utilized to transform the distributions of the prior and posterior encoders.
+
+The BigVGAN-based [^Lee2022Bigvgan] decoder generates the singing waveform from the latent representation $z$, using a neural source filter (NSF) [^Wang2019Neural] scheme with F0s to enhance pitch accuracy.
+
+After training, the posterior encoder and decoder are used to extract hidden latent variables for LDM and synthesize waveforms from the hidden latent vectors predicted by LDM.
+
+The LDM is adopted as the probabilistic model that fit the hidden distribution $p(z_{0})$ by denoising in data latent space from the pre-trained VAE model.  Denoising diffusion probabilistic model (DDPM) [^Ho2020Denoising] is used, which consists of forward and denoising processes.
+
+During the LDM training, the singer's timbre $e$ and the linear spectrogram of the singing voice $y$ are used as inputs to the posterior encoder $\mathcal{E}(\cdot)$, yielding the latent variable $z_0=\mathcal{E}(y,e)$. 
+In the forward process, the original data distribution is transformed into a standard Gaussian distribution by gradually adding noise according to a fixed schedule $\beta_1,\dots,\beta_T$, where $T$ represents the total time steps.
+
+This process includes a transition from $z_{0}$ to $z_t$ following a Markov chain, where the conditional distribution $q(z_t|z_{t-1})$ is defined as a Gaussian distribution, i.e., $q(z_t|z_{t-1}) = \mathcal{N}(z_t;\sqrt{1-\beta_t}z_{t-1}, {\beta_t}\mathbf{I})$.
+
+The reverse process, denoted by $\theta$, functions as a denoising mechanism to suppress noise and recover the original data.
+
+The denoising distribution, $p_{\theta}(z_{t-1}|z_t)$, is a conditional Gaussian distribution.
+
+As such, we iteratively sample target data $z_0$ from Gaussian noise for $t = T, T-1, \ldots, 1$, with $z_{t-1}$ sampled based on $p_{\theta}(z_{t-1}|z_t)$.
+
+The LDM uses $z_t$ and $t$ as inputs, together with conditional inputs like the singer's timbre $e$, fundamental frequency $f_0$, and PPG $x$.
+
+We also use a singer guidance method, specifically Speaker Condition Layer Normalization (SCLN) [^Wu2021Cross-Speaker] for PPG feature normalization, and a classifier-free guidance method [^Ho2022Classifier-Free] for model training to better decouple timbre information.
+
+The step-wise output $z_{t-1}$ of denoising  is calculated as:
+
+$$z_{t-1} = \frac{1}{\sqrt{\alpha_t}} \left( z_t - \frac{1-\alpha_t}{\sqrt{1-\bar{\alpha}_t}} \epsilon_{\theta}(z_t, t, x, f_0, e) \right) + \sigma_t \epsilon,
+$$
+
+where $\epsilon \sim \mathcal{N}(0, I)$, $\alpha_t = 1 - \beta_t$ and $\bar{\alpha}_t = \prod_{s=1}^t \alpha_s$.
+
+For the detailed derivation of (1), please refer to [^Ho2020Denoising].
+
+The configuration of the considered diffusion model keeps consistent with that of DiffSVC.
+
+The training loss of the LDM $\epsilon_\theta$ is defined as the mean squared error (MSE) in the noise space: 
+
+$$
+\mathcal{L}_{\rm LDM}=||\epsilon-\epsilon_\theta(z_t, t, x, f_0, e)||_2^2.
+$$
+
+During inference, we input source PPG $x_{src}$, replace the singer timbre with $e_{tar}$ and adjust $f_0$ with the target attribute.
+
+We sample random Gaussian white noise to obtain $\widetilde{z}_0$ using the denoising process.
+
+Then, we input $\widetilde{z}_0$, $e_{tar}$, and $f_0$ into the pre-trained decoder $\mathcal{D}(\cdot)$ to generate the audio waveform.
+
+### Latent Consistency Distillation
+
+![](cm2.pdf)
+
+<a id="cm">The Training and Inference procedure of LCD.</a>
+
+Following [^Luo2023Latent], we use latent consistency distillation (LCD) method to accelerate the reverse process of LDM.
+
+The Consistency Model (CM)[^Song2023Consistency] facilitates one-step or few-step generation.
+
+The fundamental concept of the CM is to learn a function capable of mapping any points on a trajectory of the Probability Flow ODE (PF-ODE) back to the trajectory's origin, which is essentially the solution of the PF-ODE.
+
+The general process of LCD is shown in Figure [cm](#cm).
+
+As the purpose of LCD is to define a function such that the target is the same for each time step $t$, in order to maintain the accuracy of the prediction, the function $**F**_{\theta}$ is defined as:
+
+$$
+\resizebox{\linewidth}{!}{$**F**_{\theta}(z_t, x,f_0,e, t) = c_{\text{skip}}(t)z_t + c_{\text{out}}(t)\left(\frac{z_t - \sigma_{t}\epsilon_{\theta}(z_t, x,f_0,e, t)}{\alpha_t}\right)$}, \notag
+$$
+
+where $c_{\text{skip}}(t)$ and $c_{\text{out}}(t)$ are differentiable functions with $c_{\text{skip}}(0)=1$ and $c_{\text{out}}(0)=0$.
+
+In order to facilitate consistency distillation, we apply a skipping-step method to expedite the convergence process.
+
+Specifically, we use an ODE solver, denoted as $\Psi(\cdot)$, to predict $\hat{z}_{t}^{\Psi}$, which is based on $z_{t+k}$ with $k$ being the interval.
+
+$$
+\resizebox{\linewidth}{!}{$\hat{z}_{t}^{\Psi}= (1+\omega)\Psi(z_{t+k},t+k,t,x,f_0,e)-\omega\Psi(z_{t+k},t+k,t,x,\varnothing)$}, \notag
+$$
+
+where $\omega$ is the guidance weight and $\Psi$ the DDIM solver.
+
+To enforce the self-consistency property, a target model $\theta^-$ is maintained.
+
+This model is updated with the exponential moving average (EMA) of the parameter $\theta$ that we aim to learn.
+
+This can be mathematically represented as:
+
+$$
+\theta^{-} \leftarrow\mu\theta^{-}+(1-\mu)\theta.
+$$
+
+To maintain the consistency of the model's output, we  define a loss function to constrain the consistency of the outputs at different steps, given by:
+
+$$
+\resizebox{\linewidth}{!}{$\mathcal{L}(\theta,\theta^{-};\Psi)= d(\mathbf{F}_\theta(z_{t+k},x,f_0,e,t+k),\mathbf{F}_{\theta^-}(\hat{z}_{t}^{\Psi},x,f_0,e,t))$}, \notag
+$$
+
+where $d(\cdot,\cdot)$ measures the distance, e.g., the often-used l2 norm.
+
+During back propagation, only $\theta$ is updated, and note that $\theta^- $is updated through EMA.
+
+The ODE solver $\Psi$ uses the frozen parameters obtained by the pre-trained LDM.
+
+The LCD training procedure is summarized in Algorithm 1.
+
+After the completion of training, the sample quality can be significantly improved via a sequence of denoising and noise injection steps.
+
+In the $n$-th iteration, we initiate a noise-injecting forward process on the previously predicted sample $\widetilde{z}_0$ as $\widetilde{z}_{\tau_{n}}\sim\mathcal{N}(\alpha_{\tau_{n}}\widetilde{z}_0,\sigma_{\tau_{n}}I)$ with
+$\tau_{n}$ denoting a decreasing sequence of time steps.
+
+The key steps of the inference procedure are outlined in Algorithm 2.
+
+For more detailed information, please refer to [^Luo2023Latent].
+
+\begin{algorithm}[t]
+\caption{Consistency Distillation of LCM-SVC.}
+
+\begin{algorithmic}[1]
+\label{alg:training}
+\REQUIRE Initial model parameter $\theta$; training set $D_{train} = \{(x,{f_0},e,y)\}_{m=1}^M$; pretrained So-VITS-SVC posterior encoder $\mathcal{E(\cdot)}$; EMA rate $\mu$; noise schedule $\alpha_{t},\sigma_{t}$; guidance weight $\omega$; ODE solver $\Psi(\cdot)$; skipping interval $k$; distance metric $d(\cdot,\cdot)$; learning rate $\eta$.
+\STATE $\theta^{-}\leftarrow\theta$
+\REPEAT
+\STATE Sample $(x, f_0, e, y)$ from $D_{train}$;
+\STATE $z_0\leftarrow\mathcal{E}(y,e)$;
+\STATE Sample $t\sim$ Uniform$(\{1, \cdots, T-k\})$;
+\STATE Sample $z_{t+k}\sim\mathcal{N}(\alpha_{t+k}z_0;\sigma_{t+k}I)$;
+\STATE $\hat{z}_{t}^{\Psi}\leftarrow  (1+\omega)\Psi(z_{t+k},t+k,t,x,f_0,e)$\\\qquad\qquad$-\omega\Psi(z_{t+k},t+k,t,x,\varnothing)$
+\STATE $\mathcal{L}(\theta,\theta^{-};\Psi)\leftarrow d(\mathbf{F}_\theta(z_{t+k},x,f_0,e,t+k),$\\\qquad\qquad\qquad~~~~~~$\mathbf{F}_{\theta^-}(\hat{z}_{t}^{\Psi},x,f_0,e,t))$;
+\STATE $\theta\leftarrow \theta - \eta\nabla_\theta(\theta,\theta^{-})$;
+\STATE $\theta^{-} \leftarrow$ stopgrad$(\mu\theta^{-}+(1-\mu)\theta)$;
+\UNTIL convergence.
+
+\end{algorithmic}
+
+\end{algorithm}
+
+\begin{algorithm}[h]
+\caption{Multi-step Inference of LCM-SVC.}
+
+\begin{algorithmic}[1]
+\label{alg:infer}
+\REQUIRE Latent Consistency Model $\mathbf{F}_\theta(\cdot)$; source singer 
+PPG $x_{src}$; target singer embedding $e_{tar}$; modified $f_0$; pretrained So-VITS-SVC decoder $\mathcal{D}(\cdot)$; noise schedule $\alpha_{t},\sigma_{t}$; sequence of timesteps $\tau_{1}>\tau_{2}>...>\tau_{N-1}$.\STATE Sample $\widetilde{z}_T\sim\mathcal{N}(0,I)$;
+\STATE $\widetilde{z}_0\leftarrow \mathbf{F}_\theta(\widetilde{z}_T,x_{src},f_0,e_{tar},T)$;
+\FOR{$n=1,2,...,N-1$}
+\STATE $\widetilde{z}_{\tau_{n}}\sim\mathcal{N}(\alpha_{\tau_{n}}\widetilde{z}_0,\sigma_{\tau_{n}}\mathbf{I})$;
+\STATE $\widetilde{z}_0\leftarrow \mathbf{F}_\theta(\widetilde{z}_{\tau_{n}},x_{src},f_0,e_{tar},\tau_{n})$;
+\ENDFOR
+\RETURN $\mathcal{D}(\widetilde{z}_0,f_0,e_{tar})$;
+\end{algorithmic}
+
+\end{algorithm}
