--- a/Models/-SVC/2024.08.22_LCM-SVC.md
+++ b/Models/-SVC/2024.08.22_LCM-SVC.md
@@ -239,3 +239,109 @@ PPG $x_{src}$; target singer embedding $e_{tar}$; modified $f_0$; pretrained So-
 \end{algorithmic}
 
 \end{algorithm}
+
+## 3·Experiment
+
+### Experimental Setup
+
+<a id="result_eer">Subjective indicators (SMOS, NMOS) and objective indicators (SSIM, FPC) of comparison methods.</a>
+
+<a id="lcm">Subjective evaluation results of LCM-SVC-$t$ inference using $t$ iterations.</a>
+
+\vspace{-0.2cm}
+
+For evaluation, we utilize the OpenSinger dataset[^Huang2021Multi-Singer], with a comprehensive collection of Chinese singers.
+
+The dataset encompasses 74 singers, including 27 males and 47 females, and comprises a total of 52 hours of recordings.  To evaluate the conversion performances of different systems, two scenarios depending on if the target singers are included in the training dataset, i.e., seen and unseen singers are conducted.
+
+In the test set, 4 male and 4 female singers are randomly selected as unseen singers.
+
+For the seen singers' case, 8 sentences from each of the remaining 66 singers are chosen for testing, while the rest of the songs are used for training.
+
+For comparative analysis, we trained So-VITS-SVC, DiffSVC, CoMoSVC and LCM-SVC teacher model (LCM-SVC-T).
+
+To ensure a fair comparison, we extract the PPG for each model using Whisper[^Radford2023Robust], and the F0 using CREPE[^Kim2018Crepe].
+
+Singer embeddings are obtained from the pre-trained model of CAM++[^Wang2023Cam++], an open-source project for speaker verification\footnote{\url{https://modelscope.cn/models/iic/speech_campplus_sv_zh-cn_16k-common/summary}}.
+
+In experiments, all audio files are resampled to 32kHz.
+
+Each model is trained for 400k steps  with a total batch size of 32.
+
+For the F0 embedding in the diffusion condition, we first quantize the Log-F0 features into 256 bins, followed by a pass through a melody embedding lookup table.
+
+During inference, we adjust the F0 of the original singer by calculating the mean F0 values of both the target and source singers within the voice segment, denoted as $\mathrm{mean}({f_0}^{src}_v)$ and $\mathrm{mean}({f_0}^{tar}_v)$, respectively.
+
+We then scale ${f_0}^{src}$ by the ratio of these mean values to obtain the modified ${f_0}$ as ${f_0}^{src} \times \frac{\mathrm{mean}({f_0}^{tar}_v)}{\mathrm{mean}({f_0}^{src}_v)}$.
+
+For the singer guidance method, we set the distortion probability $p_{\text{uncond}}$ to 0.1 during training, and the guidance weight $w$ to 0.3 during inference, in accordance with[^Ho2022Classifier-Free].
+
+The total number of diffusion steps is set to 100 (i.e., $T = 100$).
+
+The noise schedule $\beta$ is linearly distributed, starting from a minimal value of 1e-4 and reaching up to $0.06$, following the configuration used in the DiffSVC model.
+
+For CoMoSVC, we use the same configuration as [^Lu2024CoMoSVC], that is, the number of steps for training the teacher model is 50.
+
+As for the consistency distillation part, both LCM-SVC and CoMoSVC adopt the same hyper-parameters, where $\mu$ = 0.95 and the learning rate is set to 5e-5.
+
+The interval $k$ of DDIM in LCD is set to 10.
+
+For the CoMoSVC and DiffSVC models, it is necessary to train a separate vocoder that accepts mel-spectrogram as inputs.
+
+Therefore, we exploit the same structure as the BigVGAN in So-VITS-SVC to train a vocoder with NSF with the number of iterations set to 400k.
+
+### Evaluation Metrics
+
+To construct the conversion trials, we separately establish pairs of conversions for both seen and unseen scenarios.
+
+A cross-validation strategy is employed to conduct audio clips where each singer provides the vocal content information as the source and other singers provide timbre information as targets.
+
+Consequently, 528 and 448 converted song clips are formed as the test trials for the seen and unseen cases respectively.
+
+We evaluate these converted audios using objective metrics i.e.
+
+Singer Similarity (SSIM), F0 Pearson correlation (FPC), Mel Cepstral Distortion (MCD) and  Real-Time Factor (RTF).
+
+Specifically, we use the time ratio of the time taken to convert singing voices to the duration of audio as a representation of RTF.
+
+All the inference processes are conducted on one NVIDIA A100 GPU.
+
+For subjective evaluation, we randomly pick 20 audio samples from each model in both seen and unseen situations.
+
+We employ a 5-point Mean Opinion Score (MOS) (1-bad, 2-poor, 3-fair, 4-good, 5-excellent) test and invite 20 volunteers to participate in the listening test, where both  Naturalness MOS (NMOS) and Similarity MOS (SMOS) are evaluated.
+
+<a id="obj">Objective metrics of different methods.
+
+The suffix 'S' represents the Seen Singer scenario, while the suffix 'U' represents the Unseen Singer scenario.</a>
+
+### Experimental Results
+
+Table 1 shows the different results for seen and unseen scenarios.
+
+LCM-SVC-T significantly outperforms other models in terms of both NMOS and SMOS.
+
+After LCD, the performance of LCM-SVC has a slight loss, but still surpasses other baseline models in terms of timbre similarity, and the NMOS maintains  a  comparable level to the other models.
+
+Table 2 shows the performance of LCM-SVC under multi-step conditions.
+
+It can be observed that in the seen case, an increase in the number of iterations significantly improves the sound quality, but has little effect on timbre.
+
+Under the unseen condition, an increase in the number of iterations greatly enhances both sound quality and timbre.
+
+Overall, these indicate that under the seen condition, the use of LCD tends to result in a reduction in sound quality, while in the unseen case it leads to a decrease in the timbre similarity.
+
+Table 3 shows the SSIM, MCD and RTF of comparison methods under the unseen condition.
+
+It can be seen that the SSIM of the LCM-SVC methods is significantly higher than that of other models, but the MCD is at a higher level.
+
+This may be because both DiffSVC and CoMoSVC predict the Mel-spectrogram as the target, while So-VITS-SVC and LCM-SVC predict the latent representation.
+
+However, they are expected to have a better listening experience.
+
+As for the crucial RTF metric, the RTF of the diffusion-based methods DiffSVC and LCM-SVC-T is at a higher level, which is undoubtedly disastrous for real-time applications.
+
+After LCD, the RTF of LCM-SVC-1 drops to 0.004, requiring only one-step inference, but its sound quality is consequently compromised.
+
+LCM-SVC-2 and LCM-SVC-4, on the other hand, can achieve a quite good sound quality and timbre performance at an acceptable RTF.
+
+This means that unless extreme RTF is required, using 2-step or 4-step inference can be a better choice in practice.
