--- a/Models/-SVC/2024.08.22_LCM-SVC.md
+++ b/Models/-SVC/2024.08.22_LCM-SVC.md
@@ -362,3 +362,32 @@ It would be better to use a multi-step inference in situations where extreme low
 \bibliography{mybib}
 
 \end{document}
+
+## References
+
+[^Gu2021ByteSing]: {ByteSing}: A {Chinese} Singing Voice Synthesis System Using Duration Allocated Encoder-Decoder Acoustic Models and Wavernn Vocoders. 2021 12th International Symposium on Chinese Spoken Language Processing (ISCSLP) 2021.
+[^Cui2024Sifisinger]: Sifisinger: A High-Fidelity End-to-End Singing Voice Synthesizer Based on Source-Filter Model. ICASSP 2024-2024 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2024.
+[^Polyak2020Unsupervised]: Unsupervised Cross-Domain Singing Voice Conversion. arXiv:2008.02830.
+[^Liu2021Fastsvc]: Fastsvc: Fast Cross-Domain Singing Voice Conversion With Feature-Wise Linear Modulation. 2021 Ieee International Conference on Multimedia and Expo (Icme) 2021.
+[^Zhou2022HiFi-SVC]: {HiFi-SVC}: Fast High Fidelity Cross-Domain Singing Voice Conversion. ICASSP 2022-2022 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2022.
+[^Luo2020Singing]: Singing Voice Conversion With Disentangled Representations of Singer and Vocal Technique Using Variational Autoencoders. ICASSP 2020-2020 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2020.
+[^Liu2021Diff{SVC]: Diff{SVC}: A Diffusion Probabilistic Model for Singing Voice Conversion. 2021 IEEE Automatic Speech Recognition and Understanding Workshop (ASRU) 2021.
+[^Lu2024CoMoSVC]: CoMoSVC: Consistency Model-Based Singing Voice Conversion. arXiv:2401.01792.
+[^Chen2024Ldm-Svc]: {LDM-SVC: Latent Diffusion Model Based Zero-Shot Any-to-Any Singing Voice Conversion With Singer Guidance}. arXiv:2406.05325.
+[^Song2020Denoising]: Denoising Diffusion Implicit Models. arXiv:2010.02502.
+[^Lu2022DPM-Solver]: DPM-Solver: A Fast Ode Solver for Diffusion Probabilistic Model Sampling in Around 10 Steps. Advances in Neural Information Processing Systems 2022.
+[^Song2023Consistency]: Consistency Models. Proceedings of the 40th International Conference on Machine Learning 2023.
+[^Luo2023Latent]: Latent Consistency Models: Synthesizing High-Resolution Images With Few-Step Inference. arXiv:2310.04378.
+[^Kim2021Conditional]: Conditional Variational Autoencoder With Adversarial Learning for End-to-End Text-to-Speech. International Conference on Machine Learning 2021.
+[^Oord2016Wavenet]: Wavenet: A Generative Model for Raw Audio. arXiv:1609.03499.
+[^Vaswani2017Attention]: Attention Is All You Need. Advances in Neural Information Processing Systems 2017.
+[^Papamakarios2021Normalizing]: Normalizing Flows for Probabilistic Modeling and Inference. Journal of Machine Learning Research 2021.
+[^Lee2022Bigvgan]: Bigvgan: A Universal Neural Vocoder With Large-Scale Training. arXiv:2206.04658.
+[^Wang2019Neural]: Neural Source-Filter Waveform Models for Statistical Parametric Speech Synthesis. IEEE/ACM Transactions on Audio, Speech, and Language Processing 2019.
+[^Ho2020Denoising]: Denoising Diffusion Probabilistic Models. Advances in Neural Information Processing Systems 2020.
+[^Wu2021Cross-Speaker]: Cross-Speaker Emotion Transfer Based on Speaker Condition Layer Normalization and Semi-Supervised Training in Text-to-Speech. arXiv:2110.04153.
+[^Ho2022Classifier-Free]: Classifier-Free Diffusion Guidance. arXiv:2207.12598.
+[^Huang2021Multi-Singer]: Multi-Singer: Fast Multi-Singer Singing Voice Vocoder With a Large-Scale Corpus. Proceedings of the 29th ACM International Conference on Multimedia 2021.
+[^Radford2023Robust]: Robust Speech Recognition via Large-Scale Weak Supervision. International Conference on Machine Learning 2023.
+[^Kim2018Crepe]: Crepe: A Convolutional Representation for Pitch Estimation. 2018 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2018.
+[^Wang2023Cam++]: {CAM++}: A Fast and Efficient Network for Speaker Verification Using Context-Aware Masking. arXiv:2303.00332.
